--- a/pom.xml
+++ b/pom.xml
@@ -30,5 +30,11 @@
       <version>4.3.9.RELEASE</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.9</version>
+    </dependency>
   </dependencies>
 </project>
